--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Aleksi Myllyoja homepage">
+  <meta name="keywords" content="Aleksi Myllyoja, sculptor, sculpture, artist, art">
+  <meta name="author" content="Aleksi Myllyoja">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Aleksi Myllyoja</title>
 </head>
