--- a/index.html
+++ b/index.html
@@ -8,52 +8,21 @@
   <meta name="author" content="Aleksi Myllyoja">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.png">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" />
   <title>Aleksi Myllyoja</title>
 
   <style>
-    * {
-      font-family: "Lekton", monospace;
-      font-weight: 400;
-      font-style: normal;
-      }
-    h2 {
-      font-family: sans-serif;
-      font-weight: 400;
-      font-size: 1.2em;
-      margin-top: 2em;
-      white-space: pre;
-      letter-spacing: 0.1em;
-      font-weight: 300;
-    }
-
-    h2:first-of-type {
-      margin-top: 0.8em;
-    }
-
-    img {
-      max-width: 10vw;
-      min-width: 300px;
-    }
-
-    a {
-      color: blue;
-      color: black;
-      text-decoration: none;
-    }
-
-    h2 a::after {
-      content: "  →";
-    }
-
-    p {
-      letter-spacing: 0.03em;
-      white-space: pre-wrap;
+    #a {
+      position: absolute;
+      top: 0;
+      left: 30%;
+      z-index: -1;
+      height: 100%;
+      max-width: 70%;
+      object-fit: cover;
     }
   </style>
+
 </head>
 
 <body>
@@ -61,28 +30,29 @@
   <p>Artist based in Helsinki, Finland</p>
   <p><a href="mailto:aleksi.myllyoja@gmail.com">aleksi.myllyoja@gmail.com</a></p>
 
-  <!--h2><a href="#">Selected Work</a></h2-->
+  <!--h2><a href="/work">Selected Work →</a></h2-->
 
   <h2>Upcoming Exhibitions</h2>
-  <p>2026 January   Group exhibition, Academy of Fine Arts, HELSINKI, FI</p>
-  <p>2026 February  Group exhibition, Vapaan Taiteen Tila, HELSINKI, FI</p>
-  <p>2026 Autumn    Group exhibition, Academy of Fine Arts, HELSINKI, FI</p>
+  <p>1/2026  Group exhibition, Academy of Fine Arts, HELSINKI, FI</p>
+  <p>2/2026  Group exhibition, Vapaan Taiteen Tila, HELSINKI, FI</p>
+  <p>9/2026  Group exhibition, Academy of Fine Arts, HELSINKI, FI</p>
 
   <h2>Past Exhibitions</h2>
-  <p>2025   <i>Special places, other species, found materials</i>, Myllytori, Academy of Fine Arts, HELSINKI, FI, HELSINKI, FI</p>
-  <p>2025   <i>Rusotus</i>, duo exhibition with Maria Sorjonen, Asbestos Art Space, HELSINKI, FI</p>
-  <p>2025   <i>Onnenkantamoinen</i>, temporary public installation together with Piia Hiltunen & Hertta Puhakka, Hanasaari, ESPOO, FI</p>
-  <p>2024   <i>Special places, other species</i>, White studio, Academy of Fine Arts, HELSINKI, FI</p>
-  <p>2024   <i>Out-Back</i>, Taka/Tila, Academy of Fine Arts, HELSINKI, FI</p>
-  <p>2023   <i>Zine</i>, Academy of Fine Arts, HELSINKI, FI</p>
-  <p>2019   <i>BYOB – Bring Your Own Beamer</i>, Kaapelitehdas, HELSINKI, FI</p>
-  <p>2004   <i>Egna bilder – fotografiska experiment</i>, Akvaariogalleria, Wäinö Aaltosen museo, TURKU, FI</p>
+  <p>2025  <i>Special places, other species, found materials</i>, Myllytori, Academy of Fine Arts, HELSINKI, FI</p>
+  <p>2025  <i>Rusotus</i>, duo exhibition with Maria Sorjonen, Asbestos Art Space, HELSINKI, FI</p>
+  <p>2025  <i>Onnenkantamoinen</i>, temporary public installation together with Piia Hiltunen & Hertta Puhakka, Hanasaari, ESPOO, FI</p>
+  <p>2024  <i>Special places, other species</i>, group exhibition, White studio, Academy of Fine Arts, HELSINKI, FI</p>
+  <p>2024  <i>Out-Back</i>, Taka/Tila, Academy of Fine Arts, HELSINKI, FI</p>
+  <p>2023  <i>Zine</i>, Academy of Fine Arts, HELSINKI, FI</p>
+  <p>2019  <i>BYOB – Bring Your Own Beamer</i>, Kaapelitehdas, HELSINKI, FI</p>
+  <p>2004  <i>Egna bilder – fotografiska experiment</i>, Akvaariogalleria, Wäinö Aaltosen museo, TURKU, FI</p>
 
   <h2>Education</h2>
-  <p>2023 –        Bachelor of Fine Arts, Academy of Fine Arts</p>
-  <p>2011 – 2016   Bachelor of Science, Mathematics, University of Turku</p>
+  <p>2023 –            BFA, Academy of Fine Arts</p>
+  <p>2011 – 2016   BSc, Mathematics, University of Turku</p>
   <p>2016 – 2020   Mathematics, University of Helsinki / University of Turku</p>
 
+  <img id="a" src="img.jpg" \>
 </body>
 
 </html>
