--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       z-index: -1;
       height: 100%;
       max-width: 70%;
+      right: 0;
       object-fit: cover;
     }
   </style>
@@ -30,14 +31,15 @@
   <p>Artist based in Helsinki, Finland</p>
   <p><a href="mailto:aleksi.myllyoja@gmail.com">aleksi.myllyoja@gmail.com</a></p>
 
-  <!--h2><a href="/work">Selected Work →</a></h2-->
+  <!--h2><a href="/work">Selected Work   →</a></h2-->
 
   <h2>Upcoming Exhibitions</h2>
-  <p>1/2026  Group exhibition, Academy of Fine Arts, HELSINKI, FI</p>
-  <p>2/2026  Group exhibition, Vapaan Taiteen Tila, HELSINKI, FI</p>
+  <p>2/2026  <i>Kaiken Mitta</i>, group exhibition, Vapaan Taiteen Tila, HELSINKI, FI</p>
+  <p>3/2026  <i>Watch or get watched</i>, solo exhibition, Kyykky Gallery, HELSINKI, FI</p>
   <p>9/2026  Group exhibition, Academy of Fine Arts, HELSINKI, FI</p>
 
   <h2>Past Exhibitions</h2>
+  <p>2026  <i>Inventarium</i>, group exhibition, Kuva/Tila, Academy of Fine Arts, HELSINKI, FI</p>
   <p>2025  <i>Special places, other species, found materials</i>, Myllytori, Academy of Fine Arts, HELSINKI, FI</p>
   <p>2025  <i>Rusotus</i>, duo exhibition with Maria Sorjonen, Asbestos Art Space, HELSINKI, FI</p>
   <p>2025  <i>Onnenkantamoinen</i>, temporary public installation together with Piia Hiltunen & Hertta Puhakka, Hanasaari, ESPOO, FI</p>
